--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,127 @@
-.container {
-  padding: 0 2rem;
+.logo {
+  margin:  1.5rem auto;
+  display: block
 }
-
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  width: 100%;
+  min-height: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
   justify-content: center;
-  align-items: center;
+  position: absolute;
+  top: 0;
 }
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.container {
+  width: 448px;
+  background: #fff;
+  border-radius: 16px;
+  padding: 2.5rem 0rem;
+  box-shadow: 0 0 3rem rgb(255 255 255 / 35%);
+  color: var(--color-secondary);
 }
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+.container__title {
+  font-size: 1.3rem;
+  margin: 0 0 4rem 0;
+  font-weight: 400;
   text-align: center;
 }
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.container__title strong {
+  font-size: 1.2rem;
+  display: block;
+  margin-top: 0.15rem;
+}
+.form {
+  display: block;
+  margin-top: 2.55rem;
+  padding: 0 2.5rem;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.form__box {
+  position: relative;
+  line-height: 14px;
+  margin-bottom: 2.45rem;
+  display: block;
 }
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
+.form__label {
+  color: var(--color-secondary);
   font-size: 1.25rem;
-  line-height: 1.5;
+  font-weight: 300;
+  position: absolute;
+  z-index: 2;
+  left: 0px;
+  top: 0px;
+  padding: 0 2px;
+  pointer-events: none;
+  background: transparent;
+  -webkit-transition: -webkit-transform 100ms ease;
+  -moz-transition: -moz-transform 100ms ease;
+  -o-transition: -o-transform 100ms ease;
+  -ms-transition: -ms-transform 100ms ease;
+  transition: transform 100ms ease;
+  -webkit-transform: translateY(-20px);
+  -moz-transform: translateY(-20px);
+  -o-transform: translateY(-20px);
+  -ms-transform: translateY(-20px);
+  transform: translateY(-20px);
 }
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.form__input {
+  font-size: 1.2rem;
+  font-weight: 300;
+  color: #555;
+  outline: none;
+  border: none;
+  border-bottom: 1px dashed #bbb;
+  position: relative;
+  width: 100%
 }
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.form__input:invalid + .form__label {
+  color: #bbb;
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -o-transform: translateY(0);
+  -ms-transform: translateY(0);
+  transform: translateY(0);
 }
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
+.form__input:focus {
+  border-color: var(--color-secondary);
+}
+.form__input:focus + .form__label {
+  color: var(--color-secondary);
+  -webkit-transform: translateY(-20px);
+  -moz-transform: translateY(-20px);
+  -o-transform: translateY(-20px);
+  -ms-transform: translateY(-20px);
+  transform: translateY(-20px);
+}
+.form__button {
+  font-size: 1rem;
+  font-weight: 400;
+  display: block;
+  background: var(--background-secondary);
+  color: var(--color-secondary);
+  border-radius: 16px;
+  padding: 1.2rem;
+  width: 100%;
+  border: 1px solid transparent;
+  transition: all 0.2s ease;
+  box-sizing: border-box;
+  text-align: center;
+}
+.form__button_active {
+  background: var(--color-secondary);
+  color: #fff;
+  cursor: pointer;
+}
+.container__option {
+  margin-top: 1rem;
+  padding: 0 2.5rem;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-weight: 400;
+}
+.option__link {
+  margin-top: 1rem;
 }
