--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,10 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Poppins", sans-serif;
+  background: var(--background-primary);
+  color: var(--color-primary);
+  min-height: 100vh;
 }
 
 a {
@@ -14,13 +16,16 @@ a {
 * {
   box-sizing: border-box;
 }
+:focus-visible {
+  outline: unset;
+}
+:root {
+  --background-primary: #110e33;
+  --background-secondary: #1b183e;
+  --color-primary: #fff;
+  --color-secondary: #5e48f6;
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+  --container-width-lg: 75%;
+  --container-width-md: 86%;
+  --container-width-sm: 90%;
 }
