--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -12,3 +12,10 @@
   display: flex;
   flex-direction: column;
 }
+
+@media (max-width: 800px) {
+  .container_grid__2 {
+    width: 100%;
+    grid-template-columns: 1fr;
+  }
+}
