--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,6 @@
 .logo {
-  margin:  1.5rem auto;
-  display: block
+  margin: 1.5rem auto;
+  display: block;
 }
 .main {
   width: 100%;
@@ -74,7 +74,7 @@
   border: none;
   border-bottom: 1px dashed #bbb;
   position: relative;
-  width: 100%
+  width: 100%;
 }
 .form__input:invalid + .form__label {
   color: #bbb;
@@ -124,4 +124,10 @@
 }
 .option__link {
   margin-top: 1rem;
+}
+
+@media (max-width: 510px) {
+  .container {
+    width: 100%;
+  }
 }
