--- a/styles/components/transfers.module.css
+++ b/styles/components/transfers.module.css
@@ -36,6 +36,9 @@
   display: flex;
   flex-direction: column;
   margin: 0;
+  gap: 0;
+  justify-content: unset;
+  align-items: unset;
 }
 .card__item div > div span {
   color: #565a72;
@@ -70,3 +73,4 @@
   background: var(--color-secondary);
   color: #fff;
 }
+
